Add tenant and user API

--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -14,5 +14,6 @@ common.data.already.exists.with.param=数据库总已经存在该数据,{0}:{1}
 oauth.username.not.exits=当前账号不存在
 oauth.username.illegal=当前账号无法登录，请换一个账号
 oauth.account.incorrect=您输入的账号或密码有误
+oauth.password.not.valid=密码不满足要求
 sql.result.success=执行成功
 sql.result.error=执行失败
