--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -14,5 +14,6 @@ common.data.already.exists.with.param=The data already exists in the database,{0
 oauth.username.not.exits=The current account does not exist
 oauth.username.illegal=The current account cannot be logged in. Please change your account
 oauth.account.incorrect=The current account or password is incorrect
+oauth.password.not.valid=The password is not valid
 sql.result.success=Execution successful
 sql.result.error=Execution failed
