Update utils and i18n

--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -1,19 +1,19 @@
-common.success=Success
-common.fail=Fail
-common.business.error=Please try resubmitting or refreshing the page later
-common.system.error=An exception occurs, you can view the exception details in the log in the help menu.
-common.redirect=Redirect
-common.param.error=The parameter is incorrect
-common.param.detail.error=The parameter: {0} is incorrect
-common.param.check.error=The following parameters are not valid
-common.max.upload.size=The file exceeds the maximum limit
-common.permission.denied=Permission denied
-common.data.not.found=Data not found
-common.data.already.exists=The data already exists in the database
-common.data.already.exists.with.param=The data already exists in the database,{0}:{1}
-oauth.username.not.exits=The current account does not exist
-oauth.username.illegal=The current account cannot be logged in. Please change your account
-oauth.account.incorrect=The current account or password is incorrect
-oauth.password.not.valid=The password is not valid
-sql.result.success=Execution successful
-sql.result.error=Execution failed
+common_success=Success
+common_fail=Fail
+common_business_error=Please try resubmitting or refreshing the page later
+common_system_error=An exception occurs, you can view the exception details in the log in the help menu
+common_redirect=Redirect
+common_param_error=The parameter is incorrect
+common_param_detail_error=The parameter: {0} is incorrect
+common_param_check_error=The following parameters are not valid
+common_max_upload_size=The file exceeds the maximum limit
+common_permission_denied=Permission denied
+common_data_not_found=Data not found
+common_data_already_exists=The data already exists in the database
+common_data_already_exists_with_param=The data already exists in the database,{0}:{1}
+oauth_username_not_exits=The current account does not exist
+oauth_username_illegal=The current account cannot be logged in. Please change your account
+oauth_account_incorrect=The current account or password is incorrect
+oauth_password_not_valid=The password is not valid
+sql_result_success=Execution successful
+sql_result_error=Execution failed
