--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,19 +1,19 @@
-common.success=操作成功
-common.fail=操作失败
-common.business.error=请尝试重新提交或者刷新页面
-common.system.error=系统发生异常，可在帮助中点击日志查看异常详情。
-common.redirect=重定向页面
-common.param.error=您输入的参数异常
-common.param.detail.error=您输入的参数:{0},存在异常
-common.param.check.error=请检查以下参数:
-common.max.upload.size=您输入的文件超过最大限制
-common.permission.denied=您没有权限访问该页面
-common.data.not.found=您访问的数据不存在
-common.data.already.exists=数据库总已经存在该数据
-common.data.already.exists.with.param=数据库总已经存在该数据,{0}:{1}
-oauth.username.not.exits=当前账号不存在
-oauth.username.illegal=当前账号无法登录，请换一个账号
-oauth.account.incorrect=您输入的账号或密码有误
-oauth.password.not.valid=密码不满足要求
-sql.result.success=执行成功
-sql.result.error=执行失败
+common_success=操作成功
+common_fail=操作失败
+common_business_error=请尝试重新提交或者刷新页面
+common_system_error=系统发生异常，可在帮助中点击日志查看异常详情
+common_redirect=重定向页面
+common_param_error=输入的参数异常
+common_param_detail_error=输入的参数:{0},存在异常
+common_param_check_error=请检查以下参数:
+common_max_upload_size=输入的文件超过最大限制
+common_permission_denied=没有权限访问该页面
+common_data_not_found=访问的数据不存在
+common_data_already_exists=数据库总已经存在该数据
+common_data_already_exists_with_param=数据库总已经存在该数据,{0}:{1}
+oauth_username_not_exits=当前账号不存在
+oauth_username_illegal=当前账号无法登录，账号无效
+oauth_account_incorrect=输入的账号或密码有误
+oauth_password_not_valid=密码不满足要求
+sql_result_success=执行成功
+sql_result_error=执行失败
