Add role API service

--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -15,5 +15,6 @@ oauth_username_not_exits=The current account does not exist
 oauth_username_illegal=The current account cannot be logged in. Please change your account
 oauth_account_incorrect=The current account or password is incorrect
 oauth_password_not_valid=The password is not valid
+role_not_valid=The custom role is not valid
 sql_result_success=Execution successful
 sql_result_error=Execution failed
