--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -15,5 +15,6 @@ oauth_username_not_exits=当前账号不存在
 oauth_username_illegal=当前账号无法登录，账号无效
 oauth_account_incorrect=输入的账号或密码有误
 oauth_password_not_valid=密码不满足要求
+role_not_valid=自定义角色菜单配置不正确
 sql_result_success=执行成功
 sql_result_error=执行失败
