Update auth user role service

--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -11,10 +11,12 @@ common_permission_denied=没有权限访问该页面
 common_data_not_found=访问的数据不存在
 common_data_already_exists=数据库总已经存在该数据
 common_data_already_exists_with_param=数据库总已经存在该数据,{0}:{1}
-oauth_username_not_exits=当前账号不存在
-oauth_username_illegal=当前账号无法登录，账号无效
+oauth_account_not_exits=当前账号不存在
+oauth_account_illegal=当前账号无法登录，账号无效
 oauth_account_incorrect=输入的账号或密码有误
-oauth_password_not_valid=密码不满足要求
+oauth_account_locked=当前账号已被锁定，请联系管理员
+account_not_valid=创建的账号配置不正确
+password_not_valid=密码不满足要求
 role_not_valid=自定义角色菜单配置不正确
 sql_result_success=执行成功
 sql_result_error=执行失败
