--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -11,10 +11,12 @@ common_permission_denied=Permission denied
 common_data_not_found=Data not found
 common_data_already_exists=The data already exists in the database
 common_data_already_exists_with_param=The data already exists in the database,{0}:{1}
-oauth_username_not_exits=The current account does not exist
-oauth_username_illegal=The current account cannot be logged in. Please change your account
+oauth_account_not_exits=The current account does not exist
+oauth_account_illegal=The current account is illegal. Please change your account
 oauth_account_incorrect=The current account or password is incorrect
-oauth_password_not_valid=The password is not valid
+oauth_account_locked=The current account is locked, please contact the administrator
+account_not_valid=The custom account is not valid
+password_not_valid=The password is not valid
 role_not_valid=The custom role is not valid
 sql_result_success=Execution successful
 sql_result_error=Execution failed
