Add login verify code check

--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -11,6 +11,7 @@ common_permission_denied=Permission denied
 common_data_not_found=Data not found
 common_data_already_exists=The data already exists in the database
 common_data_already_exists_with_param=The data already exists in the database,{0}:{1}
+oauth_captcha_incorrect=The verification code is incorrect
 oauth_account_not_exits=The current account does not exist
 oauth_account_illegal=The current account is illegal. Please change your account
 oauth_account_incorrect=The current account or password is incorrect
