--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -11,6 +11,7 @@ common_permission_denied=没有权限访问该页面
 common_data_not_found=访问的数据不存在
 common_data_already_exists=数据库总已经存在该数据
 common_data_already_exists_with_param=数据库总已经存在该数据,{0}:{1}
+oauth_captcha_incorrect=输入的验证码错误
 oauth_account_not_exits=当前账号不存在
 oauth_account_illegal=当前账号无法登录，账号无效
 oauth_account_incorrect=输入的账号或密码有误
