Add role permission check

--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -7,7 +7,7 @@ common_param_error=输入的参数异常
 common_param_detail_error=输入的参数:{0},存在异常
 common_param_check_error=请检查以下参数:
 common_max_upload_size=输入的文件超过最大限制
-common_permission_denied=没有权限访问该页面
+common_permission_denied=没有权限
 common_data_not_found=访问的数据不存在
 common_data_already_exists=数据库总已经存在该数据
 common_data_already_exists_with_param=数据库总已经存在该数据,{0}:{1}
