--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,23 +1,13 @@
-common_success=操作成功
-common_fail=操作失败
-common_business_error=请尝试重新提交或者刷新页面
-common_system_error=系统发生异常，可在帮助中点击日志查看异常详情
-common_redirect=重定向页面
-common_param_error=输入的参数异常
-common_param_detail_error=输入的参数:{0},存在异常
-common_param_check_error=请检查以下参数:
-common_max_upload_size=输入的文件超过最大限制
-common_permission_denied=没有权限
-common_data_not_found=访问的数据不存在
-common_data_already_exists=数据库总已经存在该数据
-common_data_already_exists_with_param=数据库总已经存在该数据,{0}:{1}
-oauth_captcha_incorrect=输入的验证码错误
-oauth_account_not_exits=当前账号不存在
-oauth_account_illegal=当前账号无法登录，账号无效
-oauth_account_incorrect=输入的账号或密码有误
-oauth_account_locked=当前账号已被锁定，请联系管理员
-account_not_valid=创建的账号配置不正确
-password_not_valid=密码不满足要求
-role_not_valid=自定义角色菜单配置不正确
-sql_result_success=执行成功
-sql_result_error=执行失败
+success=操作成功
+fail=操作失败
+common.param.error=输入的参数异常
+common.permission.denied=没有权限
+common.data.not.found=访问的数据不存在
+auth.captcha.incorrect=输入的验证码错误
+auth.account.not.exits=当前账号不存在
+auth.account.illegal=当前账号无法登录，账号无效
+auth.account.incorrect=输入的账号或密码有误
+auth.account.locked=当前账号已被锁定，请联系管理员
+account.not.valid=创建的账号配置不正确
+password.not.valid=密码不满足要求
+role.not.valid=自定义角色菜单配置不正确
