--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -1,23 +1,13 @@
-common_success=Success
-common_fail=Fail
-common_business_error=Please try resubmitting or refreshing the page later
-common_system_error=An exception occurs, you can view the exception details in the log in the help menu
-common_redirect=Redirect
-common_param_error=The parameter is incorrect
-common_param_detail_error=The parameter: {0} is incorrect
-common_param_check_error=The following parameters are not valid
-common_max_upload_size=The file exceeds the maximum limit
-common_permission_denied=Permission denied
-common_data_not_found=Data not found
-common_data_already_exists=The data already exists in the database
-common_data_already_exists_with_param=The data already exists in the database,{0}:{1}
-oauth_captcha_incorrect=The verification code is incorrect
-oauth_account_not_exits=The current account does not exist
-oauth_account_illegal=The current account is illegal. Please change your account
-oauth_account_incorrect=The current account or password is incorrect
-oauth_account_locked=The current account is locked, please contact the administrator
-account_not_valid=The custom account is not valid
-password_not_valid=The password is not valid
-role_not_valid=The custom role is not valid
-sql_result_success=Execution successful
-sql_result_error=Execution failed
+success=Success
+fail=Fail
+common.param.error=The parameter is incorrect
+common.permission.denied=Permission denied
+common.data.not.found=Data not found
+auth.captcha.incorrect=The verification code is incorrect
+auth.account.not.exits=The current account does not exist
+auth.account.illegal=The current account is illegal. Please change your account
+auth.account.incorrect=The current account or password is incorrect
+auth.account.locked=The current account is locked, please contact the administrator
+account.not.valid=The custom account is not valid
+password.not.valid=The password is not valid
+role.not.valid=The custom role is not valid
