Add i18n support for enum

--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -11,3 +11,7 @@ auth.account.locked=The current account is locked, please contact the administra
 account.not.valid=The custom account is not valid
 password.not.valid=The password is not valid
 role.not.valid=The custom role is not valid
+enum.status.disabled=Disabled
+enum.status.enabled=Enabled
+enum.status.deleted=Deleted
+enum.status.locked=Locked
