--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -11,3 +11,7 @@ auth.account.locked=当前账号已被锁定，请联系管理员
 account.not.valid=创建的账号配置不正确
 password.not.valid=密码不满足要求
 role.not.valid=自定义角色菜单配置不正确
+enum.status.disabled=无效
+enum.status.enabled=有效
+enum.status.deleted=删除
+enum.status.locked=锁定
