Update i18n for enum

--- a/seed-web/src/main/resources/i18n/messages_en_US.properties
+++ b/seed-web/src/main/resources/i18n/messages_en_US.properties
@@ -15,3 +15,8 @@ enum.status.disabled=Disabled
 enum.status.enabled=Enabled
 enum.status.deleted=Deleted
 enum.status.locked=Locked
+enum.taskstatus.init=Initialized
+enum.taskstatus.create=Created
+enum.taskstatus.success=Success
+enum.taskstatus.process=Processing
+enum.taskstatus.fail=Fail
