--- a/seed-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/seed-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -15,3 +15,8 @@ enum.status.disabled=无效
 enum.status.enabled=有效
 enum.status.deleted=删除
 enum.status.locked=锁定
+enum.taskstatus.init=未处理
+enum.taskstatus.create=已创建
+enum.taskstatus.success=完成
+enum.taskstatus.process=处理中
+enum.taskstatus.fail=失败
